# audio-stego

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  README.md  autocorrelation.cpp  conv.cpp  conv.h  echo_hiding.cpp  echo_hiding.h  embedder.h  extractor.h  fft.cpp  lsb_embedder.h  lsb_extractor.h  main.cpp  phase_embedder.cpp  phase_embedder.h  phase_extractor.cpp  processing.cpp  processing.h
src/: CMakeLists.txt  args.cpp  args.h  audio_io.h  audioparams.cpp  audioparams.h  autocepstrum.cpp  autocepstrum.h  autocorrelation.cpp  autocorrelation.h  bitvector.cpp  bitvector.h  conv.cpp  conv.h  coverfile.cpp  coverfile.h  dsp_utils.cpp  dsp_utils.h  echo_hiding.cpp  echo_hiding.h  echo_hiding_hc.cpp  echo_hiding_hc.h  embedder.h  extractor.h  fft.cpp  fft.h  hamminginbitstream.cpp  hamminginbitstream.h  hammingoutbitstream.cpp  hammingoutbitstream.h  ibitstream.cpp  ibitstream.h  ifft.cpp  ifft.h  ioexception.h  lsb_embedder.h  lsb_extractor.h  lsb_substitution.cpp  lsb_substitution.h  main.cpp  (+20 more)
src/compression/: compress.cpp  compress.h  zlib_compress.cpp  zlib_compress.h
tests/: Makefile  analysis.py  ber.cpp  generate_results.sh  snr.cpp
